# GamesEngineering_Practicals

./: CMakeLists.txt  Questions.txt
engine/: engine.cpp
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_renderer/: system_renderer.cpp  system_renderer.h
lib_tile_level_loader/: LevelSystem.h  levelsystem.cpp
practical_1/: main.cpp
practical_2/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
practical_3/: entity.cpp  entity.h  main.cpp  player.cpp  player.h
practical_4/: Entity.cpp  Entity.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_AI.cpp  cmp_enemy_AI.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_shape.cpp  cmp_shape.h  cmp_sprite.cpp  main.cpp  pacman.cpp  pacman.h  scene.h  system_renderer.cpp  system_renderer.h
practical_5/: main.cpp
practical_6/: platformer_main.cpp
practical_6/components/: cmp_physics.cpp  cmp_text.cpp
practical_6/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp  scene_menu.cpp
practical_7/: astar.cpp  astar.h  game.h  main.cpp  steering.cpp  steering.h
practical_7/components/: cmp_basic_movement.h  cmp_path_follow.cpp  cmp_path_follow.h
practical_7/scenes/: scene_menu.cpp  scene_pathfinding.cpp  scene_pathfinding.h  scene_steering.cpp
practical_8/: enemy_states.cpp  enemy_states.h  game.h  main.cpp  steering_decisions.h  steering_states.cpp  steering_states.h
practical_8/components/: cmp_ai_steering.cpp  cmp_ai_steering.h  cmp_basic_movement.cpp  cmp_decision_tree.cpp  cmp_decision_tree.h
practical_8/scenes/: scene_decision.cpp  scene_decision.h  scene_menu.cpp  scene_state.cpp  scene_state.h
